--- a/package.json
+++ b/package.json
@@ -1,54 +1,43 @@
 {
-  "name": "eiam-portal",
-  "author": "Alexander Mengzhe Zhao, EIAM, Tencent",
+  "name": "mobx-ts-boilerplate",
+  "author": "Alexander Mengzhe Zhao",
   "version": "0.1.0",
   "private": true,
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/ChiuMungZitAlexander/mobx-ts-boilerplate"
   },
   "dependencies": {
-    "@tencent/tea-component": "^2.6.22",
-    "@types/crypto-js": "^4.0.2",
-    "@types/js-cookie": "^2.2.7",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
-    "axios": "^0.21.1",
-    "crypto-js": "^4.1.1",
-    "http-proxy-middleware": "^2.0.1",
-    "js-cookie": "^3.0.0",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "sass": "^1.36.0",
-    "save": "^2.4.0",
-    "typescript": "^4.1.2",
+    "react-scripts": "4.0.3",
+    "sass": "^1.37.0",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@tencent/eslint-config-tencent": "^0.14.0",
-    "@tencent/eslint-plugin-tea-i18n": "^0.1.13",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/webpack-bundle-analyzer": "^4.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "eslint": "^7.28.0",
-    "eslint-config-alloy": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.1"
+    "http-proxy-middleware": "^2.0.1",
+    "prettier": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
