--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,23 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
-    "outDir": "dist",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "pretty": true,
-    "newLine": "lf",
-    "declaration": false,
-    "emitDeclarationOnly": false,
-    "noEmitOnError": false,
-    "listEmittedFiles": true,
-    "sourceMap": true,
-    "inlineSourceMap": false,
-    "inlineSources": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "preserveSymlinks": true,
-    "jsx": "react-jsx",
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "allowJs": true,
-    "checkJs": true,
-    "strict": false,
-    "alwaysStrict": false,
-    "noImplicitAny": false,
-    "noImplicitReturns": false,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
-    "noEmit": true
+    "newLine": "lf",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "es5"
   },
   "include": ["src"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "build", "node_modules"]
 }
