--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
     "sass": "^1.37.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
@@ -32,7 +31,8 @@
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "http-proxy-middleware": "^2.0.1",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
